# edge-viewer

./: .gitignore  build.gradle  git_commits.txt  local.properties  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv_processing.cpp
app/src/main/java/com/example/edgeviewer/: CameraPreview.kt  GLTextureRenderer.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  package.json  sample_frame_base64.txt  tsconfig.json
web/src/: index.ts
